# customyou

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
backend/customu/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backend/customu/customu/: admin.py  asgi.py  settings.py  urls.py  views.py
backend/customu/customu/migrations/: 0001_initial.py
backend/healthybody/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
backend/healthybody/migrations/: 0001_initial.py
customu/customu/: settings.py  urls.py  wsgi.py
frontend/: .env  Dockerfile  docker-compose.yml
frontend/customu/: .eslintcache  package-lock.json  package.json  tsconfig.json
frontend/customu/src/: App.tsx
frontend/customu/src/api/axios/: healthybody.tsx
frontend/customu/src/api/backend/: healthybody.tsx
frontend/customu/src/api/interface/: healthybody.tsx
frontend/customu/src/api/schema/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/customu/src/components/: Head.tsx  SectionBox.tsx  index.tsx
frontend/customu/src/constants/: Settings.ts
frontend/customu/src/pages/Top/: index.tsx
frontend/customu/src/styles/: colors.ts  themes.ts
frontend/node/customu/: package-lock.json  package.json
frontend/node/customu/src/: App.js  Header.js  Top.js
frontend/node/customu/src/customu/api/: getDaily.js
frontend/node/customu/src/customu/components/: CategoryList.js  DailyCategory.js  DailyContent.js
openapi/: healthybody.yaml
(+3 files in other folders)
